--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+j<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -96,7 +96,7 @@
 
     <header>
         <!-- Profile picture inside header, left-aligned near name -->
-        <img src="IMG 2025..." alt="Nandhitha L" class="profile-picture">
+        <img src="IMG_20250321_090209.JPG" alt="Nandhitha L" class="profile-picture">
         <div class="header-content">
             <h1>Nandhitha L</h1>
             <p>BCA. Computer Application</p>
@@ -154,7 +154,7 @@
 
     <section id="resume">
         <div class="section-content" style="text-align: center;">
-            <h2>Resume</h2>
+            <h2>Resume.pdf</h2>
             <!-- Corrected Resume Download Button -->
             <a href="resume.pdf"class="download-button">Download CV</a>
         </div>
